@@ -20,6 +20,10 @@
 #' \code{.Rprofile}).
 #' @param AN.xlsx logical.  If \code{TRUE} the article notes (AN) will be in 
 #' .xlsx format.  If \code{FALSE} the document will be a .csv file.
+#' @param slidify_clean logical.  If TRUE the PRESENTATION .Rmd file will be 
+#' generated by slidify.  If FALSE the .Rmd file will be initialize with 
+#' additional parameters for convenience.
+#' @param \ldots Other arguments passed to \code{\link[slidify]{author}}
 #' @section Suggestion: The user may want to set \code{\link[base]{options}} for 
 #' \code{bib.loc}, \code{name_reports}, \code{temp_reports}, \code{github.user} 
 #' and \code{sources_reports} in the user's primary \code{.Rprofile}:
@@ -46,7 +50,7 @@
 new_report <- function(report = "report", template = getOption("temp_reports"), 
     bib.loc = getOption("bib.loc"), name = getOption("name_reports"), 
     github.user = getOption("github.user"), sources = getOption("sources_reports"), 
-    path = getwd(), AN.xlsx = TRUE) {
+    path = getwd(), AN.xlsx = TRUE, slidify_clean = FALSE, ...) {
     if (is.null(template)) template <- "apa6.mod.quant_rnw"
     if (!tail(unlist(strsplit(template, "_")), 1) %in% c("rnw", "web", "doc", "tex")) {
     	stop("Please supply a correct template name")
@@ -70,25 +74,6 @@ new_report <- function(report = "report", template = getOption("temp_reports"),
     REPORT <- ARTICLES <- OUTLINE <- PRESENTATION <- NULL
     WD <- getwd(); on.exit(setwd(WD))
     setwd(x)
-    y <- invisible(folder(REPORT, ARTICLES, OUTLINE, PRESENTATION))
-    AN <- system.file("extdata/docs", package = "reports")
-    if (AN.xlsx) {
-        invisible(file.copy(file.path(AN, "notes.xlsx"), y[[2]]))   
-    invisible(file.rename(file.path(y[[2]], "notes.xlsx"), 
-        file.path(y[[2]], paste0("notes_", report, ".xlsx"))))          
-    } else {
-        invisible(file.copy(file.path(AN, "notes.csv"), y[[2]])) 
-    invisible(file.rename(file.path(y[[2]], "notes.csv"), 
-        file.path(y[[2]], paste0("notes_", report, ".csv")))) 
-
-    }
-    cat("http://", file = file.path(y[[2]], "websites.txt"))
-    cat(file = file.path(x, "TO_DO.txt"))
-    cat(file = file.path(x, "NOTES.txt"))
-    EXF <- "#Source the following project functions on startup"
-    cat(EXF, file = file.path(x, "extra_functions.R"))
-    dat <- data.frame(inf=c("doc", "rnw", "tex", "web"), outf=c(1, 2, 2, 3), 
-        stringsAsFactors = FALSE)
     root <- system.file("extdata/doc_library", package = "reports")
     if (!template %in% dir(root)) {
         if (!file.exists(root)) {
@@ -101,12 +86,66 @@ new_report <- function(report = "report", template = getOption("temp_reports"),
     pdfloc <- file.path(root, template)
     desc <- suppressWarnings(readLines(file.path(pdfloc, "DESCRIPTION"))) #read in the description file
     desc.chunk1 <- "Outline:"
+    desc.chunk2 <- "Presentation:"
     outline.type <- Trim(unlist(strsplit(gsub(desc.chunk1, "", desc[grepl(desc.chunk1, desc)]), ",")))   
     outline.type <- gsub("rmd", "web", outline.type)
+    pres <- Trim(unlist(strsplit(gsub(desc.chunk2, "", desc[grepl(desc.chunk2, desc)]), ","))) 
     type <- tail(unlist(strsplit(basename(template), "_")), 1)
+    dat <- data.frame(inf=c("doc", "rnw", "tex", "web"), outf=c(1, 2, 2, 3), 
+        stringsAsFactors = FALSE)
     if (all(!dat[, 1] %in% type)) {
         stop("template must end in \"_doc\", \"_tex\", \"_rnw\", or \"_web\"")
     }
+    if (sum(pres %in% "rmd") < 1) {
+        y <- invisible(folder(REPORT, ARTICLES, OUTLINE, PRESENTATION))
+    } else {
+        y <- invisible(folder(REPORT, ARTICLES, OUTLINE))
+        y[[4]] <- file.path(x, "PRESENTATION")
+        suppressMessages(author(y[[4]], use_git = FALSE, open_rmd = FALSE)    )
+        setwd(x)
+        new_Rmd <- file.path(y[[4]], "index.Rmd")
+        Rmd <- suppressWarnings(readLines(new_Rmd )) 
+        Rmd[2] <- paste0(Rmd[2], report)
+        if(!is.null(name)) {
+            Rmd[4] <- paste0(Rmd[4], strsplit(name, "\\\\")[[1]][1])
+        }
+        Rmd[10] <- "mode        : selfcontained"
+        Rmd[23] <- paste0("For slidify framework examples run:    \n", 
+            "browseURL(\"https://github.com/ramnathv/slidifyExamples\")    \n")
+        if (!slidify_clean) {
+            Rmd[9] <- "widgets     : [mathjax, quiz, bootstrap]"
+            piece1 <- "--- dt:10\n\n<script>\nhandleDomLoadedExtra = function(){};\n</script>\n\n"
+            piece2 <- "```{r setup, include=FALSE}\n# set global chunk options\nopts_chunk$set(cache=FALSE)\n"
+            piece3 <- "library(knitcitations)\nBIB <- system.file(\"extdata/docs/example.bib\", package = \"reports\") #test .bib\n"
+            piece4 <- "bib <- read.bibtex(BIB)\n#\n#Reading in your own bib file:\n"
+            piece5 <- "#bib <- read.bibtex(dir()[tools::file_ext(dir()) == \"bib\"][1])\n"
+            piece6 <- "#cite in text using `r citet(bib[1])`\n```\n"
+            piece7 <- "<style>\nbody {\n  background-color: #000;\n}\n"
+            piece8 <- ".quiz-option label{\n  display: inline;\n  font-size: 1em;\n}\n"
+            piece9 <- ".refs {\n  padding-left: 80px;\n  text-indent: -35px;\n}\n"
+            piece10 <- "ul.nav li::before { content: \"\"; } \nul.nav li{ font-size: 18px; line-height: 24px;}\n</style>\n"
+            Rmd[11] <- paste0(piece1, piece2, piece3, piece4, piece5, piece6, piece7, piece8, piece9, piece10)
+            Rmd[25] <- "--- .refs\n## References\n```{r, echo=FALSE, results='asis'}\nbibliography(\"html\")\n```"
+            Rmd[23] <- paste0(Rmd[23], "\n", "`r citet(bib[1])`\n")
+        }
+        cat(paste(Rmd, collapse="\n"), file = file.path(y[[4]], paste0(report, ".Rmd")))
+        delete(new_Rmd)
+    }
+    AN <- system.file("extdata/docs", package = "reports")
+    if (AN.xlsx) {
+        invisible(file.copy(file.path(AN, "notes.xlsx"), y[[2]]))   
+        invisible(file.rename(file.path(y[[2]], "notes.xlsx"), 
+            file.path(y[[2]], paste0("notes_", report, ".xlsx"))))          
+    } else {
+        invisible(file.copy(file.path(AN, "notes.csv"), y[[2]])) 
+        invisible(file.rename(file.path(y[[2]], "notes.csv"), 
+            file.path(y[[2]], paste0("notes_", report, ".csv")))) 
+    }
+    cat("http://", file = file.path(y[[2]], "websites.txt"))
+    cat(file = file.path(x, "TO_DO.txt"))
+    cat(file = file.path(x, "NOTES.txt"))
+    EXF <- "#Source the following project functions on startup"
+    cat(EXF, file = file.path(x, "extra_functions.R"))
     invisible(file.copy(pdfloc, y[[1]]))   
     outline <- dat[dat[, "inf"] %in% outline.type, "outf"]
     A <- B <- C <- NULL
@@ -123,12 +162,11 @@ new_report <- function(report = "report", template = getOption("temp_reports"),
     invisible(file.copy(file.path(root2, fls) , y[[3]]))
     pdfloc3 <- file.path(root2, c("temp.Rmd", "temp.Rnw", "temp.pptx"))
     dir.create(file.path(y[[4]], "figure"), FALSE)
-    desc.chunk2 <- "Presentation:"
     present.type <- Trim(unlist(strsplit(gsub(desc.chunk2, "", desc[grepl(desc.chunk2, desc)]), ",")))
     matches <- data.frame(grab = pdfloc3,
         required = tolower(tools::file_ext(basename(pdfloc3))), stringsAsFactors = FALSE)
-    present.copies <- matches[matches[, "required"] %in% present.type , "grab"]
-    invisible(file.copy(present.copies, y[[4]])) #copy presentation files to folde
+    present.copies <- matches[-1, ][matches[, "required"][-1] %in% present.type , "grab"]
+    invisible(file.copy(present.copies, y[[4]])) #copy presentation files to folder
     old.names <- file.path(y[[4]], dir(y[[4]]))
     new.names <- file.path(y[[4]], gsub("temp.", paste0(report, "."), dir(y[[4]]), fixed = TRUE))
     file.rename(old.names, new.names)
@@ -139,7 +177,7 @@ new_report <- function(report = "report", template = getOption("temp_reports"),
     pdfloc5 <- file.path(root2, "REPORT_WORKFLOW_GUIDE.pdf")
     invisible(file.copy(pdfloc5, x))
     rpro <- c("#Load the packages used",
-        "library(reports); library(slidify); library(knitr); library(knitcitations)", 
+        "library(reports); library(slidify); library(slidifyLibraries); library(knitr); library(knitcitations)", 
     	"# library(pander)", "")  
     rpro2 <- c("", "#Source \"extra_functions.R\":",
         "source(file.path(getwd(), \"extra_functions.R\"))")
@@ -245,6 +283,7 @@ new_report <- function(report = "report", template = getOption("temp_reports"),
     class(o) <- "reports"
     return(o)    
 }
+
 
 
 
