@@ -8,7 +8,7 @@
     name = getOption("name_reports"),
     github.user = getOption("github.user"),
     sources = getOption("sources_reports"), path = getwd(),
-    AN.xlsx = TRUE)
+    AN.xlsx = TRUE, slidify_clean = FALSE, ...)
 }
 \arguments{
   \item{report}{A character vector of length two or one:
@@ -41,6 +41,14 @@
   \item{AN.xlsx}{logical.  If \code{TRUE} the article notes
   (AN) will be in .xlsx format.  If \code{FALSE} the
   document will be a .csv file.}
+
+  \item{slidify_clean}{logical.  If TRUE the PRESENTATION
+  .Rmd file will be generated by slidify.  If FALSE the
+  .Rmd file will be initialize with additional parameters
+  for convenience.}
+
+  \item{\ldots}{Other arguments passed to
+  \code{\link[slidify]{author}}}
 }
 \value{
   Creates a report template.
